# Vulk

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build_init.sh  config.json.in  vcpkg.json
.github/workflows/: cmake-single-platform.yml
Assets/: CMakeLists.txt
Assets/Actors/: Skull.actor
Assets/Pipelines/: BlinnPhong.pipeline  DebugNormals.pipeline  DebugTangents.pipeline  GoochShading.pipeline  LitModel.pipeline  LitShadowMappedModel.pipeline  PBR.pipeline  PBR2.pipeline  Pick.pipeline  ShadowMap.pipeline  Wireframe.pipeline  template.pipeline.json
Assets/Scenes/: BlinnPhong.scene  DragonSculpture.scene  (+6 more)
Source/: main.cpp
Source/Samples/: CMakeLists.txt  PlanarShadowWorld.h  SampleRunner.h  World.h  main.cpp
Source/Samples/Cubemap/: CMakeLists.txt  cubemap.cpp  cubemap.proj
Source/Samples/Cubemap/Assets/Materials/DebugCubemap/: DebugCubemap.mtl
Source/Samples/Cubemap/Assets/Pipelines/: cubemap.pipeline
Source/Samples/Cubemap/Assets/Scenes/: cubemap.scene
Source/Samples/Cubemap/Assets/Shaders/Common/: common.glsl
Source/Samples/Cubemap/Assets/Shaders/Frag/: Cubemap.frag  DebugAxes.frag  DebugNormals.frag  GoochShading.frag  ShadowMap.frag  Wireframe.frag
Source/Samples/Cubemap/Assets/Shaders/Geom/: DebugNormals.geom
Source/Samples/Cubemap/Assets/Shaders/Vert/: Cubemap.vert  DebugAxes.vert  LitShadowMappedModel.vert
Source/Samples/DeferredShading/: CMakeLists.txt  deferredshading.cpp  deferredshading.proj
Source/Samples/DeferredShading/Assets/Materials/herringbone-flooring-bl/: herringbone-flooring-bl.mtl
Source/Samples/DeferredShading/Assets/Pipelines/: DebugAxes.pipeline  DeferredRenderGeo.pipeline  DeferredRenderLighting.pipeline  DeferredShadingGeo.pipeline  DeferredShadingLighting.pipeline  Wireframe.pipeline
Source/Samples/DeferredShading/Assets/Scenes/: DeferredShading.scene
Source/Samples/DeferredShading/Assets/Shaders/Common/: common.glsl
Source/Samples/DeferredShading/Assets/Shaders/Frag/: DeferredRenderGeo.frag  DeferredRenderLighting.frag
Source/Samples/DeferredShading/Assets/Shaders/Vert/: BasicPassthru.vert  DebugAxes.vert  DebugNormals.vert  DebugTangents.vert  DeferredRenderGeo.vert  DeferredRenderLighting.vert
Source/Samples/PBR/: CMakeLists.txt  pbr.cpp
Source/Samples/imguiVulkan/: CMakeLists.txt  imgui.cpp  imgui2.cpp
Source/Schemas/: CMakeLists.txt
Source/Schemas/Flatbuf/: VulkResourceMetadata.fbs  VulkShaderEnums.fbs
Source/Schemas/Protobuf/: VulkResourceMetadata.proto
Source/Schemas/Thrift/: VulkResourceMetadata.thrift  VulkShaderEnums.thrift
Source/Tools/BuildTool/: BuildPipeline.h  BuildProject.cpp  BuildProject.h  BuildTool.cpp  CMakeLists.txt  PipelineBuilder.cpp  PipelineBuilder.h
Source/Tools/BuildTool/Tests/: BuildPipelineTests.cpp  BuildProjectTests.cpp  BuildToolTests.cpp  CMakeLists.txt  PipelineBuilderTests.cpp
Source/Tools/BuildTool/Tests/Scenes/: basic.scene
Source/Tools/BuildTool/Tests/TestProjBuildDir/: test.proj
Source/Tools/BuildTool/Tests/TestProjDir/: test.proj
Source/Tools/BuildTool/Tests/TestProjDir/Assets/Materials/test/: test.mtl
Source/Tools/BuildTool/Tests/TestProjDir/Assets/Pipelines/: DebugNormals.pipeline  test.pipeline
Source/Tools/BuildTool/Tests/TestProjDir/Assets/Scenes/: test.scene
Source/Tools/BuildTool/Tests/TestProjDir/Assets/Shaders/Frag/: DebugNormals.frag  test.frag
Source/Tools/BuildTool/Tests/pipelines/: TestPipeline.json
Source/Tools/BuildTool/Tests/shaders/frag/: DebugNormals.fragspv  DeferredRenderLighting.fragspv  Pick.fragspv
Source/Tools/BuildTool/Tests/shaders/geom/: DebugNormals.geomspv
Source/Tools/BuildTool/Tests/shaders/vert/: DebugNormals.vertspv  DeferredRenderLighting.vertspv
Source/Tools/PipelineBuilder/: CMakeLists.txt  PipelineBuilder.cpp  PipelineBuilder.h  config.json
Source/Tools/PipelineBuilder/Tests/: CMakeLists.txt  PipelineBuilderTests.cpp
Source/Tools/PipelineBuilder/Tests/shaders/frag/: GoochShading.fragspv
Source/Tools/PipelineBuilder/Tests/spirvs/geom/: DebugNormals.geomspv
Source/Tools/PipelineBuilder/Tests/spirvs/vert/: DebugNormals.vertspv
Source/Tools/VertFrag/Tests/: CMakeLists.txt  vertfrag_tests.cpp
Source/Vulk/: CMakeLists.txt  Vulk.h  VulkActor.cpp  VulkActor.h  VulkDescriptorSet.h  VulkDescriptorSetBuilder.h  VulkDescriptorSetLayoutBuilder.cpp  VulkDescriptorSetUpdater.cpp  VulkDescriptorSetUpdater.h  VulkFrameUBOs.h  VulkGeo.cpp  VulkMaterialTextures.h  VulkMesh.cpp  VulkMesh.h  VulkModel.h  VulkPipelineBuilder.cpp  VulkPipelineBuilder.h  VulkResourceMetadata.cpp  VulkResourceMetadata.h  VulkResources.cpp  VulkResources.h  VulkSampler.h  VulkScene.h  VulkShaderEnums.h  VulkTextureView.cpp  VulkTextureView.h  VulkUniformBuffer.h  VulkUtil.cpp  VulkUtil.h
Source/Vulk/Tests/: CMakeLists.txt  VulkTests.cpp
Source/Vulk/include/Vulk/: ClassMovableOnly.h  ClassNonCopyableNonMovable.h  Vulk.h  VulkActor.h  VulkBuffer.h  VulkBufferBuilder.h  VulkCamera.h  VulkCereal.h  VulkConstants.h  VulkCubemap.h  VulkDeferredRenderpass.h  VulkDepthRenderpass.h  VulkDepthView.h  VulkDescriptorPoolBuilder.h  VulkDescriptorSet.h  VulkDescriptorSetBuilder.h  VulkDescriptorSetLayout.h  VulkDescriptorSetLayoutBuilder.h  VulkDescriptorSetUpdater.h  VulkEnumMetadata.h  VulkException.h  VulkFence.h  VulkFrameBuffer.h  VulkFrameUBOs.h  VulkGeo.h  VulkImGui.h  VulkImageView.h  VulkLogger.h  VulkMaterialTextures.h  VulkMesh.h  VulkModel.h  VulkPCH.h  VulkPickRenderpass.h  VulkPipeline.h  VulkPipelineBuilder.h  VulkPointLight.h  VulkPushConstant.h  VulkResourceMetadata.h  VulkResources.h  VulkSampler.h  (+7 more)
Source/Vulk/private/: VulkImGui.h  VulkResourceMetadata.h
Source/Vulk/src/: Vulk.cpp  VulkActor.cpp  VulkCamera.cpp  VulkCubemap.cpp  VulkDeferredRenderpass.cpp  VulkDescriptorSetLayoutBuilder.cpp  VulkDescriptorSetUpdater.cpp  VulkFrameUBOs.h  VulkGeo.cpp  VulkImageView.cpp  VulkMesh.cpp  VulkMesh.h  VulkPipelineBuilder.cpp  VulkPipelineBuilder.h  VulkResourceMetadata.cpp  VulkResourceMetadata.h  VulkResources.cpp  VulkResources.h  VulkTextureView.cpp  VulkUtil.cpp
(+48 files in other folders)
